# HWbaseC

./: README.md
Less_10/Task_1/: CMakeLists.txt  README.md  main.cpp
Less_10/Task_2/: CMakeLists.txt  README.md
Less_10/Task_2/header/: Triangle.h
Less_10/Task_2/source/: Figure.cpp  Quadrangle.cpp  Triangle.cpp  main.cpp
Less_11/Task_1/: CMakeLists.txt
Less_11/Task_2/: CMakeLists.txt
Less_11/Task_3/: CMakeLists.txt  README.md
Less_11/Task_4/: CMakeLists.txt  README.md
Less_11/Task_5/: CMakeLists.txt  README.md
Less_2/Task_1/: main.cpp
Less_2/Task_2/: main.cpp
Less_2/Task_3/: README.md  main.cpp
Less_3/Task_1/: CMakeLists.txt  Calculator.cpp  Calculator.h  README.md  main.cpp
Less_3/Task_2/: CMakeLists.txt  Counter.cpp  Counter.h  main.cpp
Less_4/Task_1/: Address.cpp  Address.h  CMakeLists.txt  main.cpp
Less_4/Task_2/: Address.cpp  Address.h  CMakeLists.txt  main.cpp
Less_5/Task_2/: CMakeLists.txt  README.md  main.cpp
Less_5/Task_3/: CMakeLists.txt  README.md  main.cpp
Less_6/Task_1/: CMakeLists.txt  func.cpp  func.h  main.cpp
Less_6/Task_2/: CMakeLists.txt  Counter.cpp  Counter.h  README.md  main.cpp
Less_6/Task_3/: CMakeLists.txt  Figure.h  Quadrangle.cpp  README.md  Triangle.cpp  (+1 more)
Less_8/Task_2/: CMakeLists.txt  README.md  equilateral.cpp  equilateral.h  err_figure.cpp  err_figure.h  figure.cpp  figure.h  isosceles.cpp  isosceles.h  main.cpp  parallelogram.cpp  parallelogram.h  quadrangle.cpp  quadrangle.h  rTriangle.cpp  rTriangle.h  rectangle.cpp  rectangle.h  rhomb.cpp  rhomb.h  square.cpp  square.h  triangle.cpp  triangle.h
(+26 files in other folders)
