cmake_minimum_required(VERSION 3.19)
project(08_02_v5)

set(CMAKE_CXX_STANDARD 14)

add_executable(08_02_v5 main.cpp equilateral.cpp equilateral.h err_figure.cpp err_figure.h figure.cpp figure.h isosceles.cpp isosceles.h parallelogram.cpp parallelogram.h quadrangle.cpp quadrangle.h rectangle.cpp rectangle.h rhomb.cpp rhomb.h rTriangle.cpp rTriangle.h square.cpp square.h triangle.cpp triangle.h)